--- a/ShahWilayat/Views/Transfer/Index.cshtml
+++ b/ShahWilayat/Views/Transfer/Index.cshtml
@@ -278,7 +278,7 @@
                             <tr style="line-height:20px;">
                                 <td style="width: 15%;"></td>
                                 <td colspan="3">
-                                    <label>Name of Transferee: </label><span><b><u>Qamar Un Nisa </u></b></span>
+                                    <label>Name of Transferee: </label><span><b><u class="printTransferFullName"></u></b></span>
                                 </td>
                                 <td style="width:5%;"></td>
                             </tr>
@@ -286,7 +286,7 @@
                             <tr style="line-height:20px;">
                                 <td style="width: 15%;"></td>
                                 <td colspan="3">
-                                    <label>S/o, D/o, W/o: </label><span><b><u>Firasat Ali Siddiqui</u></b></span>
+                                    <label>S/o, D/o, W/o: </label><span><b><u class="printTransferFatherName"></u></b></span>
                                 </td>
                                 <td style="width:5%;"></td>
                             </tr>
@@ -294,7 +294,7 @@
                             <tr style="line-height:20px;">
                                 <td style="width: 15%;"></td>
                                 <td colspan="3">
-                                    <label>National Identity Card No:</label><span><b><u>42201-4327962-2</u></b></span>
+                                    <label>National Identity Card No:</label><span><b><u class="printTransferCNIC"></u></b></span>
                                 </td>
                                 <td style="width:5%;"></td>
                             </tr>
@@ -304,8 +304,8 @@
                                 <td colspan="3">
                                     <label>Address: </label><span>
                                         <b>
-                                            <u>
-                                                House # A-188, Block 13, Gulistan-e-Jouhar, Karachi.
+                                            <u class="printTransferAddress">
+                                               
                                             </u>
                                         </b>
                                     </span>
@@ -315,9 +315,9 @@
                             <tr style="line-height:20px;">
                                 <td style="width:15%;"></td>
                                 <td colspan="3">
-                                    <label>Plot No:</label>&nbsp;&nbsp;<span><b><u>R-258 </u></b></span>
+                                    <label>Plot No:</label>&nbsp;&nbsp;<span><b><u class="printTransferPlotNo"></u></b></span>
                                     <label>Sector No.</label>&nbsp;&nbsp;<span><b><u>49-A </u></b></span>
-                                    <label>Area:</label>&nbsp;&nbsp;<span><b><u>120</u></b></span>&nbsp;&nbsp;Sq. Yds.
+                                    <label>Area:</label>&nbsp;&nbsp;<span><b><u class="printTransferSize"></u></b></span>&nbsp;&nbsp;Sq. Yds.
                                 </td>
                                 <td style="width: 5%;"></td>
                             </tr>
@@ -331,7 +331,7 @@
                                     </p>
                                     <p style="line-height:1.3;font-size:18px;text-align:justify;">
                                         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;With the approval of the Managing Committee meeting of Shah Wilayat
-                                        Cooperative Housing Society Ltd., Karachi held on <span><b><u>04-05-2019</u></b>, the Society has been pleased to transfer the occupancy rights of the above plot in your name by the way of Sale Agreement, dated <span><b><u>10-04-2019</u></b>, in heritance on the same terms and conditions on which the plot was originally allotted. Your Membership no.will be <span><b><u>SWC/166/06</u></b>.
+                                        Cooperative Housing Society Ltd., Karachi held on <span><b><u class="printTransferMCMDate"></u></b>, the Society has been pleased to transfer the occupancy rights of the above plot in your name by the way of Sale Agreement, dated </span><b><u>10-04-2019</u></b>, in heritance on the same terms and conditions on which the plot was originally allotted. Your Membership no.will be <span><b><u class="printAllotteeMembershipNo"></u></b>.
                                     </p>
                                 </td>
                                 <td style="width:5%;"></td>
@@ -355,14 +355,14 @@
                             <tr style="line-height:20px;">
                                 <td style="width: 15%;"></td>
                                 <td colspan="3">
-                                    <label>CC To: </label>&nbsp;&nbsp;<span><b><u>Sadaf Syed</u></b></span>
+                                    <label>CC To: </label>&nbsp;&nbsp;<span><b><u class="printAllotteeFullName"></u></b></span>
                                 </td>
                                 <td style="width:5%;"></td>
                             </tr>
                             <tr style="line-height:20px;">
                                 <td style="width: 15%;"></td>
                                 <td colspan="3">
-                                    <label>CNIC # :</label>&nbsp;&nbsp;<span><b><u>43828-8281278-3</u></b></span>
+                                    <label>CNIC # :</label>&nbsp;&nbsp;<span><b><u class="printAllotteeCNIC"></u></b></span>
                                 </td>
                                 <td style="width:5%;"></td>
                             </tr>
@@ -371,9 +371,7 @@
                                 <td colspan="3">
                                     <label>Address:</label>&nbsp;&nbsp;<span>
                                         <b>
-                                            <u>
-                                                House # L-3021, Gulshan-e- Iqbal,
-                                                <br> Block 2,Metrovill III, Karachi
+                                            <u class="printAllotteeAddress">
                                             </u>
                                         </b>
                                     </span>
@@ -431,7 +429,7 @@
 
 
             <td class="project-title" nowrap>
-                <a href="javascript:void(0)"  onclick="PrintTransferOrder()" data-toggle="tooltip" data-placement="top" data-original-title="Print Transfer Order"><i class="la la-exchange primary"></i></a> &nbsp;
+                <a href="javascript:void(0)"  onclick="PrintTransferOrder(this)" data-toggle="tooltip" data-placement="top" data-original-title="Print Transfer Order"><i class="la la-exchange primary"></i></a> &nbsp;
 
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditTransfer" onclick="EditTransfer(this)" data-toggle="tooltip" data-placement="top" data-original-title="Edit Transfer"><i class="la la-pencil-square success"></i></a>
                 <a href="javascript:void(0)" data-toggle="modal" data-target="#EditAttachment" onclick="EditTransfer(this)" title="Edit Attachment"><i class="ft-paperclip"></i></a>
