Done with Members validations and bindings.

--- a/ShahWilayat/Views/Member/Index.cshtml
+++ b/ShahWilayat/Views/Member/Index.cshtml
@@ -610,7 +610,7 @@
                                 <tr style="line-height:15px;">
                                     <td rowspan="2">
 
-                                        <img height="130px;" class="tdProfilePicPrint" width="120px;" alt="User Pic" src="~/Uploads/Musab Yahiya_20190123163602_20190725020850.jpg" style="border:2px solid #028130; border-radius:50%;">
+                                        <img height="130px;" class="printProfileFile" width="120px;" alt="User Pic" src="" style="border:2px solid #028130; border-radius:50%;">
                                     </td>
 
                                     <td style="border-bottom: 1px solid #028130;">
@@ -856,7 +856,7 @@
                                             <img src="" class="IDCardProfile" style="width:75px; height: 97px;">
                                         </div>
                                         <div class="MemberName">
-                                            <span><b>Muhammad Fahad</b></span>
+                                            <span><b class="IDCardFullName"></b></span>
                                         </div>
                                         <div class="MemberAddress">
                                             <span class="IDCardAddress"></span>
