--- a/ShahWilayat/Views/MembershipSingle/Index.cshtml
+++ b/ShahWilayat/Views/MembershipSingle/Index.cshtml
@@ -69,106 +69,107 @@
                                 <tr>
                                 <tr>
                                     <td>
+
                                         <img src="~/Content/assets/css/PrintMaterial/MembershipSingle/Form.jpg" style="width:100%;">
                                         <div class="RefNo">
-                                            <span><b>SWCHSL/R-120/2019</b></span>
+                                            <span><b class="printReferenceNo"></b></span>
                                         </div>
                                         <div class="MembershipDate">
-                                            <span><b>17th November, 2006</b></span>
+                                            <span><b class="printMembershipDate"></b></span>
                                         </div>
                                         <div class="MemberName">
-                                            <span><b>Muhammad Fahad</b></span>
+                                            <span><b class="printFullName"></b></span>
                                         </div>
                                         <div class="MemberFatherName">
-                                            <span><b>Muhammad Nizam Uddin</b></span>
+                                            <span><b class="printFatherName"></b></span>
                                         </div>
                                         <div class="NomineeName">
-                                            <span><b>Muhammad Faisal</b></span>
+                                            <span><b class="printNomineeFullName"></b></span>
                                         </div>
                                         <div class="NomineeFatherName">
-                                            <span><b>Muhammad Nizam Uddin</b></span>
+                                            <span><b class="printNomineeFatherName"></b></span>
                                         </div>
                                         <div class="MemberDOB">
-                                            <span><b>05-07-1996</b></span>
+                                            <span><b class="printDob"></b></span>
                                         </div>
                                         <div class="MemberBirthPlace">
-                                            <span><b>Karachi</b></span>
+                                            <span><b class="printBirthPlace"></b></span>
                                         </div>
 
                                         <div class="NomineeDOB">
-                                            <span><b>21-03-1972</b></span>
+                                            <span><b class="printNomineeDob"></b></span>
                                         </div>
                                         <div class="NomineeBirthPlace">
-                                            <span><b>Karachi</b></span>
+                                            <span><b class="printNomineeBirthPlace"></b></span>
                                         </div>
                                         <div class="MemberImage">
-                                            <img src="~/Content/assets/css/PrintMaterial/MembershipSingle/user.jpg" style="width:111px; height: 153px;">
+                                            <img class="printProfileFile" src="~/Content/assets/css/PrintMaterial/MembershipSingle/Fahad.jpg" style="width:111px; height: 153px;">
                                         </div>
                                         <div class="NomineeImage">
-                                            <img src="~/Content/assets/css/PrintMaterial/MembershipSingle/Fahad.jpg" style="width:111px; height: 153px;border-radius:0px 16px 0px 0px;">
+                                            <img class="printNomineeProfileFile" src="~/Content/assets/css/PrintMaterial/MembershipSingle/Musab.jpg" style="width:111px; height: 153px;border-radius:0px 16px 0px 0px;">
                                         </div>
                                         <div class="MemberAddress">
-                                            <span> House # A-188, Block 13, Gulistan-e-Jouhar, Karachi.</span>
+                                            <span class="printPermanentAddress"> House # A-188, Block 13, Gulistan-e-Jouhar, Karachi.</span>
                                         </div>
                                         <div class="NomineeAddress">
-                                            <span> House # A-188, Block 13, Gulistan-e-Jouhar, Karachi.</span>
+                                            <span class="printNomineePermanentAddress"> House # A-188, Block 13, Gulistan-e-Jouhar, Karachi.</span>
                                         </div>
                                         <div class="MemberCNIC">
-                                            <span>42101-5762826-3</span>
+                                            <span class="printCNIC">42101-5762826-3</span>
                                         </div>
                                         <div class="NomineeCNIC">
-                                            <span>43201-7882702-8</span>
+                                            <span class="printNomineeCNIC">43201-7882702-8</span>
                                         </div>
 
                                         <div class="MemberLandline">
-                                            <span><b>021-34423977</b></span>
+                                            <span><b class="printLandline">021-34423977</b></span>
                                         </div>
                                         <div class="NomineeLandline">
-                                            <span><b>021-34423977</b></span>
+                                            <span><b class="printNomineeLandline">021-34423977</b></span>
                                         </div>
 
                                         <div class="MemberOffLandline">
-                                            <span><b>021-34423977</b></span>
+                                            <span><b class="printOfficePhone">021-34423977</b></span>
                                         </div>
                                         <div class="NomineeOffLandline">
-                                            <span><b>021-34423977</b></span>
+                                            <span><b class="printNomineeOffPhone">021-34423977</b></span>
                                         </div>
 
                                         <div class="MemberBloodGroup">
-                                            <span><b>A+</b></span>
+                                            <span><b class="printBloodGroup">A+</b></span>
                                         </div>
                                         <div class="NomineeBloodRelation">
-                                            <span><b>Mother</b></span>
+                                            <span><b class="printNomineeRelation">Mother</b></span>
                                         </div>
                                         <div class="MemberMobile">
-                                            <span><b>021-34423977</b></span>
+                                            <span><b class="printCellNo">021-34423977</b></span>
                                         </div>
                                         <div class="NomineeMobile">
-                                            <span><b>021-34423977</b></span>
+                                            <span><b class="printNomineeCellNo">021-34423977</b></span>
                                         </div>
                                         <div class="MemberEmail">
-                                            <span><b>Musabyahiya@hotmail.com</b></span>
+                                            <span><b class="printEmail">Musabyahiya@hotmail.com</b></span>
                                         </div>
                                         <div class="NomineeEmail">
-                                            <span><b>m.fahad2016@gmail.com</b></span>
+                                            <span><b class="printNomineeEmail">m.fahad2016@gmail.com</b></span>
                                         </div>
                                         <div class="NomineeRelation">
-                                            <span><b>Mother</b></span>
+                                            <span><b class="printNomineeRelation">Mother</b></span>
                                         </div>
                                         <div class="NomineeRelationName">
-                                            <span><b>Msab Yahiya</b></span>
+                                            <span><b class="printNomineeFullName">Msab Yahiya</b></span>
                                         </div>
                                         <div class="PlotTitle">
-                                            <span><b>Residential</b></span>
+                                            <span><b class="printPlotType">Residential</b></span>
                                         </div>
                                         <div class="MembershipNo">
-                                            <span><b>SWC/192/06</b></span>
+                                            <span><b class="printMembershipNo">SWC/192/06</b></span>
                                         </div>
                                         <div class="PlotNo">
-                                            <span><b>R-120</b></span>
+                                            <span><b class="printPlotNo">R-120</b></span>
                                         </div>
                                         <div class="PlotSize">
-                                            <span><b>120</b></span>
+                                            <span><b class="printPlotSize">120</b></span>
                                         </div>
                                     </td>
                                 </tr>
@@ -180,12 +181,14 @@
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn grey btn-outline-info" data-dismiss="modal">Close</button>
-                <button type="button" class="btn btn-outline-warning btnPrint" onclick="PrintMembershipSingle();">Print</button>
+                <button type="button" class="btn btn-outline-warning btnPrint" onclick="PrintMembershipSingle(this);">Print</button>
             </div>
         </div>
     </div>
 </div>
 @*Print Modal Start*@
+
+
 @section Scripts
 {
     <script type="text/x-jQuery-tmpl" id="MembershipFormSingleListing">
@@ -224,7 +227,8 @@
 
             <td class="project-title" nowrap>
 
-                <a href="javascript:void(0)"  onclick="PrintMembershipSingle();" title="Membership Single"><i class="la la-user warning"></i></a>
+                <a href="javascript:void(0)" onclick="PrintMembershipSingle(this);" title="Membership Single"><i class="la la-user warning"></i></a>
+
             </td>
 
 
