--- a/ShahWilayat/Views/Transfer/Index.cshtml
+++ b/ShahWilayat/Views/Transfer/Index.cshtml
@@ -117,6 +117,12 @@
                                 <input type="text" id="txtNewspaperAdvDate" class="form-control DatePicker txtNewspaperAdvDate" placeholder="yyyy-mm-dd">
                             </div>
                         </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label for="ddlManagementCommittee">Created By</label>
+                                <select class="form-control ddlManagementCommittee"></select>
+                            </div>
+                        </div>
 
                     </div>
                     <h4 class="form-section"><i class="ft-paperclip"></i> Attachments</h4>
@@ -231,6 +237,12 @@
                             <div class="form-group">
                                 <label for="txtNewspaperAdvDate_upd">Newspaper Advertisement Date</label>
                                 <input type="text" id="txtNewspaperAdvDate_upd" class="form-control DatePicker txtNewspaperAdvDate_upd" placeholder="yyyy-mm-dd">
+                            </div>
+                        </div>
+                        <div class="col-md-3">
+                            <div class="form-group">
+                                <label for="ddlManagementCommittee">Created By</label>
+                                <select class="form-control ddlManagementCommittee"></select>
                             </div>
                         </div>
 
