Done with tenure Setup

--- a/ShahWilayat/Views/Transfer/Index.cshtml
+++ b/ShahWilayat/Views/Transfer/Index.cshtml
@@ -352,7 +352,7 @@
                             <tr><td><br></td></tr>
                             <tr>
                                 <td style="width: 15%;"></td>
-                                <td><img src="~/Content/assets/css/PrintMaterial/TransferOrder/user.jpg" style="width:130px; height:170px;"></td>
+                                <td><img src="" class="printTransferProfile" style="width:130px; height:170px;"></td>
                                 <td style="text-align: center;padding-top:50px;">
                                     <span style="margin-right: 50px;">_______________</span>
                                     <span>_____________________</span> <br>
